feat: тестирование Full-Cycle Pipeline